--- a/PSearch/build.gradle
+++ b/PSearch/build.gradle
@@ -7,8 +7,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    // https://mvnrepository.com/artifact/com.toedter/jcalendar
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.toedter', name: 'jcalendar', version: '1.4'
+
 }
