--- a/PSearch/build.gradle
+++ b/PSearch/build.gradle
@@ -8,10 +8,13 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     // https://mvnrepository.com/artifact/com.toedter/jcalendar
+    // https://mvnrepository.com/artifact/log4j/log4j
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.toedter', name: 'jcalendar', version: '1.4'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+
 
 }
