--- a/PSearch/build.gradle
+++ b/PSearch/build.gradle
@@ -13,5 +13,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.toedter', name: 'jcalendar', version: '1.4'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
 
 }
