--- a/PSearch/build.gradle
+++ b/PSearch/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '0.7.7'
+    //read doc
+    compile group: 'org.apache.poi', name: 'poi', version: '3.16'
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
+    compile group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '3.16-beta1'
+
 }
