--- a/PSearch/build.gradle
+++ b/PSearch/build.gradle
@@ -8,6 +8,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     // https://mvnrepository.com/artifact/com.toedter/jcalendar
+    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
 }
 
 dependencies {
@@ -31,5 +32,6 @@ dependencies {
     compile group: 'org.apache.poi', name: 'poi', version: '3.16'
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
     compile group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '3.16-beta1'
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
 
 }
