--- a/PSearch/build.gradle
+++ b/PSearch/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
     compile group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '3.16-beta1'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
-
+    compile group: 'org.apache.xmlbeans', name: 'xmlbeans', version: '2.6.0'
 }
